accordion spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,8 +127,9 @@ span {
     background-color: grey;
     width: 100%;
     min-width: 100%;
-    height: 1000px;
+    height: 2000px;
     margin-top: 300px;
+    overflow:hidden;
  }
  
  .results-div {
@@ -137,6 +138,7 @@ span {
  
 #accordion {
     border-radius:6px;
+    margin-top: 10px;
 }
 
  .result-item {
